--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-body {
-  padding-bottom: 20px;
-}
-
-.navbar {
-  margin-bottom: 20px;
-}
-
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
 
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
@@ -58,16 +43,6 @@ body {
 }
 
 /* Nav Bar Style End */
-
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
-body {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  color: #5a5a5a;
-}
 
 
 /* CUSTOMIZE THE CAROUSEL
@@ -141,5 +116,9 @@ body {
     margin-top: 7rem;
   }
 }
+
+/* .carousel-inner {
+  max-height: 500px;
+} */
 
 /* End of Carousel */
